<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/ModelTypeM"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:entries="@array/ModelType_arrays"
            android:prompt="@string/ModelType_prompt" />

        <Spinner
            android:id="@+id/NgramM"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:entries="@array/Ngram_arrays"
            android:prompt="@string/Ngram_prompt" />
        
         <Spinner
             android:id="@+id/ThresholdNgramM"
             android:layout_width="78dp"
             android:layout_height="wrap_content"
             android:entries="@array/ThresholdNgram_arrays"
             android:prompt="@string/ThresholdNgram_prompt" />


    </LinearLayout>

             <EditText
    android:layout_marginTop="15dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/ThresholdTotalM"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/TotalTHreshold"
    android:inputType="numberDecimal" />
             
                 <View
        android:layout_width="wrap_content"
        android:layout_height="3px"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="#FF909090" />
                 
    <ListView
        android:id="@+id/applist"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.49" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".10"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_scan"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scan" />

        <Button
            android:id="@+id/button_modelise"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_modelise" />

        <Button
            android:id="@+id/button_bench"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bench" />

    </LinearLayout>

</LinearLayout>